# securitybench

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
sb/: __init__.py  __main__.py  auditor.py  bench.py  cli.py  config.py  judge_rules.json  loader.py  output.py  runner.py
sb/docs/: __init__.py  man.html
sb/evaluators/: __init__.py  pattern.py
sb/reports/: __init__.py
tests/: conftest.py  test_adapters.py  test_bench.py  test_cli.py  test_config.py  test_evaluator.py  test_loader.py  test_multi_turn.py  test_reports.py  test_runner.py  test_schema.py
